# bottec_bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
admin_panel/: .dockerignore  .env-empty  Dockerfile  README.md  init.sh
admin_panel/config/: settings.py  urls.py
admin_panel/panel/: admin.py  models.py  urls.py  views.py
bot/: .env-empty  Dockerfile  requirements.txt
bot/src/: config.py  main.py  utils.py
bot/src/cart/: cart.py  router.py
bot/src/db/: config.py  models.py  repository.py
bot/src/faq/: router.py
bot/src/logs/: config.py
bot/src/products/: router.py
bot/src/tasks/: promo.py
nginx/: nginx.conf
